@@ -23,7 +23,7 @@ New Features
 * hamsterdb is now thread safe
 
 Bugfixes
-* none
+* Fixed a buffer overrun in the freelist
 
 Other Changes
 * Several code cleanups; more modules were converted to C++
