@@ -1,5 +1,8 @@
-Apr 21, 2012 - chris ---------------------------------------------------
+Apr 25, 2012 - chris ---------------------------------------------------
                       release of hamsterdb-2.0.2
+
+Apr 24, 2012 - chris ---------------------------------------------------
+o Fixed a buffer overrun in the freelist
 
 Apr 14, 2012 - chris ---------------------------------------------------
 o hamsterdb is now thread safe. The boost c++ library is now required for
